--- a/package.json
+++ b/package.json
@@ -1,14 +1,38 @@
 {
   "name": "tasktrove",
   "version": "1.0.0",
-  "description": "A to-do app with enhanced functionality and interactivity",
+  "description": "",
   "main": "index.js",
-  "keywords": [
-    "todo",
-    "task",
-    "app",
-    "webpack"
-  ],
-  "author": "freddyfavour",
-  "license": "MIT"
+  "scripts": {
+    "build": "webpack",
+    "dev": "webpack serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/freddyfavour/TaskTrove.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/freddyfavour/TaskTrove/issues"
+  },
+  "homepage": "https://github.com/freddyfavour/TaskTrove#readme",
+  "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.90.3",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2"
+  },
+  "dependencies": {
+    "axios": "^1.6.7"
+  }
 }
